--- a/src/App.css
+++ b/src/App.css
@@ -36,14 +36,107 @@
     transform: rotate(360deg);
   }
 }
-/* .navBar {
-  display: flex;
-}
-.browserRouter {
-  display: flex;
-} */
 
-.custom-card-img {
-  /* background-color: #3280ce81; */
-  /* z-index: -1; */
+.searchImage img {
+  transform: rotate(25deg);
+  bottom: 0;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  height: 100px;
+  position: absolute;
+  width: 100px;
+  left: 120px;
+}
+.serchImage img:hover {
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+}
+.searchCard {
+  overflow: hidden;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 8px;
+  position: relative;
+  width: 100%;
+  cursor: pointer;
+}
+.playbutton {
+  cursor: pointer;
+}
+.playbutton:hover {
+  animation: forward-icon-anim 0.5s ease;
+  transform: scale(1.1);
+}
+@keyframes forward-icon-anim {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+.heart:hover {
+  color: white;
+  font-weight: bolder;
+  cursor: pointer;
+  fill: white;
+}
+tr:hover {
+  cursor: pointer;
+  background-color: rgba(128, 128, 128, 0.267);
+}
+
+.playbuttons:hover {
+  animation: bottomToTop 2s ease-in-out;
+}
+
+@keyframes bottomToTop {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+.socialMediaIcon:hover {
+  background-color: #8792b2;
+}
+.search-input-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.search-input-container input {
+  padding-right: 40px;
+}
+
+.search-icon {
+  position: absolute;
+  /* right: 10px; */
+  left: 10px;
+  top: 45%;
+  transform: translateY(-50%);
+}
+.search-input-container input {
+  text-indent: 40px; /* Adjust the value based on the margin-left value */
+}
+.sideItems:hover {
+  color: white;
+}
+.sideNav:hover {
+  color: white;
+}
+
+.header-background {
+  padding: 20px 20px;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0) 60%,
+    rgba(177, 2, 74, 1) 100%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
